--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.2.0",
   "private": true,
   "author": {
-    "name": "shadcn",
-    "url": "https://twitter.com/shadcn"
+    "name": "Masaicode",
+    "url": "https://twitter.com/masaicode"
   },
   "scripts": {
     "dev": "concurrently \"contentlayer dev\" \"next dev\"",
